# Raid

./: .env.example  .gitignore  CLAUDE.md  CLI_USAGE.md  LICENSE  README.md  pyproject.toml
.cursor/rules/: design.mdc
profiles/: advanced_agent.yaml  calculator_agent.yaml  developer_agent.yaml  research_agent.yaml  setup_agent.yaml
src/raid/: __init__.py
src/raid/cli/: __init__.py  agents.py  collab.py  control.py  formatters.py  main.py  profiles.py  system.py  tasks.py  utils.py
src/raid/config/: __init__.py  collaboration.py  dynamic_subagent.py  settings.py  sub_agent_config.py
src/raid/control_agent/: __init__.py  agent.py  main.py  meta_tools.py  react_engine.py
src/raid/docker_orchestrator/: __init__.py  orchestrator.py
src/raid/lifecycle/: __init__.py  manager.py
src/raid/llm_backend/: __init__.py  factory.py  interface.py  ollama_backend.py  openai_backend.py
src/raid/message_queue/: __init__.py  models.py  redis_mq.py
src/raid/sub_agent/: __init__.py  agent.py  main.py  react_engine.py
src/raid/tools/: __init__.py  base.py  bash_executor.py  calculator.py  file_operations.py  notification.py  python_executor.py  websearch.py
src/sub_agent_example/: Dockerfile  task_script.py
